--- a/asset/style/home-page.css
+++ b/asset/style/home-page.css
@@ -87,7 +87,6 @@
 }
 
 .container {
-    width: 1216px;
     margin: 0 auto;
 }
 
@@ -103,9 +102,6 @@ a {
     color: var(--secondary-600);
 }
 
-input {
-    outline: none;
-}
 
 /*HEADER*/
 
@@ -114,23 +110,23 @@ header {
     padding: 32px 0 56px 0;
     color: var(--secondary-600);
     font-family: var(--font-WorkSansRegular);
-
+    display: flex;
 }
 
-header form,
-.item-menu,
-header,
+
 nav {
     display: flex;
 }
 
 header form {
+    display: flex;
     align-items: center;
 }
 
 
 
 .item-menu {
+    display: flex;
     align-items: center;
     font-weight: var(--font-w4);
     justify-content: flex-end;
@@ -143,8 +139,6 @@ header form {
 
 
 .logo {
-    margin-right: 44px;
-    align-items: center;
     display: flex;
 }
 
@@ -213,16 +207,11 @@ header form {
 }
 
 .item-ipt button {
-    width: 4px;
-    height: 4px;
     color: #52525b;
-    border-radius: 2px;
-    position: absolute;
-    right: 23px;
-    bottom: 23px;
     cursor: pointer;
     border: none;
-    outline: none;
+    border-radius: 5px;
+    background-color: var(--secondary-100-f);
 }
 
 
@@ -263,12 +252,7 @@ header form {
     left: 22px;
 }
 
-
-
-
-
 /*Main*/
-
 
 main section:first-child {
     position: relative;
@@ -491,7 +475,8 @@ footer {
 
 
 .about {
-    width: 35%;
+    width: 40%;
+    padding-right: 145px;
 }
 
 .about p {
@@ -510,15 +495,15 @@ footer {
 
 .quick-link,
 .category {
-    width: 12%;
+    width: 13%;
 }
 
 .quick-link {
-    padding-left: 145px;
+    padding-right: 80px;
 }
 
 .category {
-    padding: 0 140px 0 80px;
+    padding-right: 140px;
 }
 
 .quick-link h5,
@@ -542,8 +527,6 @@ footer {
 .quick-link ul li a:hover,
 .category ul li a:hover {
     color: var(--btn-primary);
-    font-family: var(--font-PlusJakartaSansSemiBold);
-    font-weight: var(--font-w5);
 }
 
 .list-footer {
@@ -554,7 +537,7 @@ footer {
 }
 
 .form-footer {
-    width: 43%;
+    width: 44%;
     text-align: center;
     background-color: var(--var-color-white);
     border-radius: 12px;
@@ -647,13 +630,14 @@ footer {
 
 }
 
-.logo-footer span a p {
+.logo-footer a span,
+.logo-footer p {
     font-family: var(--font-PlusJakartaSansRegular);
     font-weight: var(--font-w4);
     color: var(--secondary-900);
 }
 
-.logo-footer span a p span {
+.logo-footer p span {
     color: var(--secondary-600);
 }
 
