--- a/asset/style/media-screen.css
+++ b/asset/style/media-screen.css
@@ -223,8 +223,8 @@
 
 	.form-introduce {
 		left: 30px;
+		width: 65%;
 	}
-
 
 	.form-introduce h2 {
 		margin: 8px 0 12px 0;
@@ -272,7 +272,6 @@
 		border-top: 2px solid #ccc;
 		width: 80%;
 		text-align: center;
-
 	}
 
 	.container {
@@ -280,7 +279,7 @@
 	}
 
 	.form-introduce h2 {
-		font-size: 17px;
+		font-size: 18px;
 		line-height: 20px;
 		margin: 6px 0 7px 0;
 	}
@@ -289,36 +288,8 @@
 		margin-left: 10px;
 	}
 
-	.vector {
-		top: 9px;
-		left: 10px;
-	}
-
-	.switch-toggle {
-		width: 33px;
-		height: 32px;
-		appearance: none;
-		background-color: var(--secondary-100);
-		border-radius: 100px;
-		position: relative;
-		cursor: pointer;
-	}
-
-	.switch-toggle::before {
-		content: none;
-		width: 0;
-		height: 0;
-		position: initial;
-	}
-
-	.switch-toggle:checked {
-		background-color: var(--secondary-600);
-	}
-
-	.switch-toggle:checked+.vector {
-		left: 13px;
-		filter: brightness(0) invert(1);
-		-webkit-filter: brightness(0) invert(1);
+	.form-introduce {
+		width: 82%;
 	}
 
 	.form-footer form i {
@@ -328,6 +299,14 @@
 	.user img {
 		width: 26px;
 		height: 26px;
+	}
+
+	.user span {
+		padding-left: 7px;
+	}
+
+	.form-introduce .time {
+		margin-left: 8px;
 	}
 
 
@@ -421,6 +400,38 @@
 		-webkit-filter: brightness(0) invert(1);
 	}
 
+	.switch-toggle {
+		width: 33px;
+		height: 32px;
+		appearance: none;
+		background-color: var(--secondary-100);
+		border-radius: 100px;
+		position: relative;
+		cursor: pointer;
+	}
+
+	.switch-toggle::before {
+		content: none;
+		width: 0;
+		height: 0;
+		position: initial;
+	}
+
+	.switch-toggle:checked {
+		background-color: var(--secondary-600);
+	}
+
+	.switch-toggle:checked+.vector {
+		left: 10px;
+		filter: brightness(0) invert(1);
+		-webkit-filter: brightness(0) invert(1);
+	}
+
+	.vector {
+		top: 9px;
+		left: 10px;
+	}
+
 	.icon {
 		order: 3;
 		display: block;
@@ -473,7 +484,7 @@
 		padding: 20px;
 		position: relative;
 		display: block;
-		width: 65%;
+
 		margin: -80px auto 0 auto;
 		background-color: white;
 		bottom: 0;
@@ -573,7 +584,10 @@
 		padding: 16px 0;
 	}
 
-	.logo-footer,
+	.logo-footer {
+		margin: 10px 0 10px 10px;
+	}
+
 	.last ul {
 		margin: 10px auto;
 	}
