--- a/asset/style/media-screen.css
+++ b/asset/style/media-screen.css
@@ -51,6 +51,15 @@
 
 /* Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) and (max-width: 991.98px) {
+
+	/*BOOTSTRAP*/
+	.item-ipt:first-child {
+		margin-right: 20px;
+	}
+
+
+	/**/
+
 	/* .item-ipt:first-child input {
 		display: none;
 	}
