--- a/asset/style/media-screen.css
+++ b/asset/style/media-screen.css
@@ -1,18 +1,52 @@
 ﻿/* Extra large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) {
 
-	header nav ul {
-		flex: auto;
-		margin-right: 105px;
+	.container {
+		width: 1028px;
 	}
+
+	.nav-header {
+		flex: auto;
+	}
+
+	.nav-header ul {
+		margin-right: 50px;
+	}
+
 
 }
 
 /* -------------------- Config Website -------------------- */
-@media (min-width: 1400px) {}
+@media (min-width: 1400px) {
+	.container {
+		width: 1218px;
+	}
+
+	.nav-header ul {
+		margin-right: 105px;
+	}
+
+
+}
 
 /* Large devices (desktops, 992px and up) */
 @media (min-width: 992px) and (max-width: 1199.98px) {
+	.container {
+		width: 848px;
+	}
+
+	.nav-header ul li {
+		margin-right: 12px !important;
+	}
+
+	.item-ipt:first-child {
+		margin-right: 20px !important;
+	}
+
+	/* .nav-header ul {
+		display: none;
+	} */
+
 	/* .container {
 		width: 960px;
 	}
@@ -29,9 +63,7 @@
 		width: 42%;
 	}
 
-	.item-ipt:first-child input {
-		padding-left: 5px;
-	}
+
 
 	.item-menu li:last-child {
 		margin-right: 0;
@@ -53,53 +85,12 @@
 @media (min-width: 768px) and (max-width: 991.98px) {
 
 	/*BOOTSTRAP*/
-	.item-ipt:first-child {
-		margin-right: 20px;
-	}
 
-
-	/**/
-
-	/* .item-ipt:first-child input {
-		display: none;
-	}
-
-	.item-ipt:first-child {
-		margin-right: 18px;
-	}
-
-	.container {
-		width: 720px;
-	}
-
-	.width-img {
-		width: 100%;
-	} */
 
 	.width-750 {
 		width: 80%;
 	}
 
-	/* .item-menu {
-		justify-content: center;
-	}
-
-	.item-menu li a {
-
-		margin: 0 16px;
-	}
-
-	.item-menu li:last-child {
-		margin-right: 10px;
-	}
-
-	.logo {
-		margin-right: 0;
-	} 
-
-	nav {
-		margin-left: 20px;
-	}*/
 
 	.form-introduce {
 		padding: 30px;
@@ -217,9 +208,6 @@
 @media (min-width: 576px) and (max-width: 767.98px) {
 
 	/*BOOTSTRAP*/
-	.item-ipt:first-child {
-		margin-right: 20px;
-	}
 
 	/**/
 
@@ -283,6 +271,25 @@
 
 	/*BOOTSTRAP*/
 
+	.nav-header ul {
+		flex-direction: column !important;
+		padding-top: 10px;
+	}
+
+
+	.nav-header ul input {
+		height: 50px;
+		width: 100%;
+		border-top-left-radius: 5px;
+		border-bottom-left-radius: 5px;
+	}
+
+	.nav-header ul button {
+		padding: 10px 20px;
+		border-top-right-radius: 5px;
+		border-bottom-right-radius: 5px;
+	}
+
 	.switch-toggle {
 		width: 38px !important;
 		height: 37px !important;
@@ -310,35 +317,6 @@
 
 
 
-	/**/
-
-
-
-	/* 
-	nav form div {
-		display: none;
-	} */
-
-	/* 
-	.displayFlex {
-		flex-direction: column;
-		width: 100%;
-	}
-
-	.displayFlex li {
-		margin-top: 10px;
-		border-top: 2px solid #ccc;
-		width: 80%;
-		text-align: center;
-	} 
-	
-	.icon {
-		margin-right: 5px;
-	} 
-
-	.container {
-		width: 100%;
-	} */
 
 	.form-introduce h2 {
 		font-size: 18px;
@@ -398,14 +376,16 @@
 @media (min-width: 1500px) {}
 
 @media (max-width: 991px) {
-	.item-ipt button {
-		padding: 10px;
+	.item-ipt:first-child {
+		margin-right: 20px !important;
 	}
 
-	.last ul li a {
-		border: none;
-		padding: 0;
-		line-height: 28px;
+	.nav-header ul {
+		flex-direction: row;
+	}
+
+	.item-ipt:first-child button {
+		padding: 8px;
 	}
 }
 
@@ -427,12 +407,39 @@
 
 
 	/*BOOTSTRAP*/
-	nav div ul {
+
+	.nav-header {
+		margin: 0 auto !important;
+	}
+
+	.nav-header ul {
 		width: 100%;
 		margin-top: 10px;
 		text-transform: uppercase;
 		border-top: 1px solid #ccc;
+		order: 4;
+		justify-content: space-between !important;
 
+	}
+
+	.nav-header div ul li {
+		margin-right: 0 !important;
+	}
+
+	.nav-header form {
+		margin-right: 15px;
+	}
+
+	.item-ipt:first-child button {
+		order: 1;
+	}
+
+	.item-ipt:last-child {
+		order: 2;
+	}
+
+	.btn-show-nav {
+		order: 3;
 	}
 
 	.nav-link {
@@ -443,16 +450,16 @@
 		margin-right: 0 !important;
 	}
 
-	nav div a img {
+	.nav-header div a img {
 		filter: brightness(0) invert(1);
 		-webkit-filter: brightness(0) invert(1);
 	}
 
-	/**/
-
 	header {
 		background-color: #141414;
 	}
+
+
 
 	/* .item-menu li a {
 		margin-right: 0;
