--- a/asset/style/media-screen.css
+++ b/asset/style/media-screen.css
@@ -8,8 +8,6 @@
 	.nav-header ul {
 		margin-right: 50px;
 	}
-
-
 }
 
 /* -------------------- Config Website -------------------- */
@@ -21,8 +19,6 @@
 	.nav-header ul {
 		margin-right: 105px;
 	}
-
-
 }
 
 /* Large devices (desktops, 992px and up) */
@@ -35,16 +31,23 @@
 		margin-right: 20px !important;
 	}
 
-	.post:nth-child(3n+1) {
-		margin-left: 10px;
+	/*Posts*/
+	article h4 {
+		font-size: 20px !important;
 	}
 
-	.post {
-		width: 42%;
+	article .user span {
+		font-size: 14px !important;
+		padding-left: 2px !important;
+	}
+
+	article .infor-user .time {
+		font-size: 14px !important;
+		margin-left: 7px !important;
 	}
 
 
-
+	/* 
 	.item-menu li:last-child {
 		margin-right: 0;
 	}
@@ -57,7 +60,7 @@
 
 	.form-footer form p {
 		font-size: 15px;
-	}
+	} */
 
 }
 
@@ -73,7 +76,7 @@
 
 
 	.form-introduce {
-		padding: 30px;
+		padding: 30px !important;
 	}
 
 	.form-introduce h2 {
@@ -81,43 +84,17 @@
 		line-height: 30px;
 	}
 
-	.post {
-		margin: 10px;
+	article .user span {
+		font-size: 14px !important;
+		padding-left: 2px !important;
 	}
 
-	.post:nth-child(3n+1) {
-		margin-right: 10px;
+	article .infor-user .time {
+		font-size: 14px !important;
+		margin-left: 8px !important;
 	}
 
-	.post:nth-child(3n) {
-		margin-left: 10px;
-	}
-
-	.post:nth-child(2n) {
-		margin-right: 0;
-		margin-left: 10px;
-	}
-
-	.post:nth-child(2n+1) {
-		margin-left: 0;
-		margin-right: 10px;
-	}
-
-	.post {
-		width: 43%;
-	}
-
-	.post h4 {
-		font-size: 20px;
-		margin: 16px 0;
-	}
-
-	.user span,
-	.time,
-	.tag {
-		font-size: 14px;
-	}
-
+	/* 
 	.first {
 		display: flex;
 		flex-wrap: wrap;
@@ -180,7 +157,7 @@
 
 	.last ul {
 		flex-direction: column;
-	}
+	} */
 
 }
 
@@ -191,21 +168,6 @@
 
 	/**/
 
-	/* .displayFlex {
-		flex-direction: row;
-		top: 85px;
-		margin-left: 45px;
-		border-top: 1px solid #ccc;
-		justify-content: space-between;
-	}
-
-	.icon {
-		margin-right: 10px;
-	} 
-
-	 .container {
-		width: 540px;
-	} */
 
 	.form-introduce {
 		left: 30px;
@@ -213,14 +175,12 @@
 	}
 
 	.form-introduce h2 {
-		margin: 8px 0 12px 0;
-		font-size: 22px;
-		line-height: 30px;
+		margin: 8px 0 12px 0 !important;
+		font-size: 22px !important;
+		line-height: 30px !important;
 	}
 
-	.icon:focus .item-menu {
-		display: block;
-	}
+	/* 
 
 	.quick-link ul,
 	.category ul {
@@ -243,7 +203,7 @@
 	.quick-link ul li,
 	.category ul li {
 		width: 48%;
-	}
+	} */
 }
 
 /* Extra small devices (portrait phones, less than 576px) */
@@ -295,25 +255,33 @@
 		left: 12px !important;
 	}
 
-
-
-
 	.form-introduce h2 {
-		font-size: 18px;
-		line-height: 20px;
-		margin: 6px 0 7px 0;
+		font-size: 18px !important;
+		line-height: 20px !important;
+		margin: 6px 0 7px 0 !important;
 	}
+
 
 	.form-introduce .time {
 		margin-left: 10px;
 	}
 
-	.form-introduce {
-		width: 82%;
+	.post {
+		width: 70%;
 	}
 
-	.form-footer form i {
-		bottom: 85px;
+	.user span {
+		font-size: 14px !important;
+		padding-left: 3px !important;
+	}
+
+	.infor-user {
+		flex-wrap: wrap;
+	}
+
+	.infor-user .time {
+		font-size: 14px !important;
+		margin-left: 7px !important;
 	}
 
 	.user img {
@@ -321,16 +289,9 @@
 		height: 26px;
 	}
 
-	.user span {
-		padding-left: 7px;
-	}
 
-	.form-introduce .time {
-		margin-left: 8px;
-	}
-
-	.time {
-		margin-left: 15px;
+	/* .form-footer form i {
+		bottom: 85px;
 	}
 
 	.form-footer form p {
@@ -348,7 +309,7 @@
 
 	.last ul li:first-child {
 		margin-top: 0;
-	}
+	} */
 
 }
 
@@ -356,6 +317,8 @@
 @media (min-width: 1500px) {}
 
 @media (max-width: 991px) {
+
+	/*HEADER*/
 	.item-ipt:first-child {
 		margin-right: 20px !important;
 	}
@@ -367,6 +330,13 @@
 	.item-ipt:first-child button {
 		padding: 8px;
 	}
+
+	/*Main*/
+
+	.title {
+		text-align: center;
+	}
+
 }
 
 @media (min-width: 768px) {
@@ -441,170 +411,48 @@
 
 
 
-	/* .item-menu li a {
-		margin-right: 0;
+	.form-introduce {
+		position: relative !important;
+		margin: -150px auto 0 auto !important;
+		bottom: 0 !important;
+		left: 0 !important;
+		padding: 20px !important;
+		width: 95%;
+		transform: translateX(10px);
 	}
-
-	.item-ipt:first-child input {
-		display: none;
-	}
-
-	.item-ipt:first-child {
-		margin-right: 35px;
-	}
-
-	header {
-		padding: 10px 0;
-		margin-bottom: 12px;
-		background-color: #141414;
-		color: white;
-		justify-content: space-between;
-	}
-
-	.container {
-		flex-wrap: wrap;
-	}
-
-	.container form {
-		order: 2;
-	}
-
-	.item-ipt:last-child {
-		right: 15px;
-	} */
-
-	/* 
-	.logo {
-		order: 1;
-		margin-right: auto;
-		margin-left: 10px;
-		filter: brightness(0) invert(1);
-		-webkit-filter: brightness(0) invert(1);
-	}
-
-	.switch-toggle {
-		width: 33px;
-		height: 32px;
-		appearance: none;
-		background-color: var(--secondary-100);
-		border-radius: 100px;
-		position: relative;
-		cursor: pointer;
-	}
-
-	.switch-toggle::before {
-		content: none;
-		width: 0;
-		height: 0;
-		position: initial;
-	}
-
-	.switch-toggle:checked {
-		background-color: var(--secondary-600);
-	} */
-
-	/* .switch-toggle:checked+.vector {
-		left: 10px;
-		filter: brightness(0) invert(1);
-		-webkit-filter: brightness(0) invert(1);
-	} 
-
-	.vector {
-		top: 9px;
-		left: 10px;
-	}
-	
-	.icon {
-		order: 3;
-		display: block;
-		border-radius: 6px;
-	}
-
-	.item-menu {
-		display: none;
-	} 
-
-	.displayFlex {
-		order: 4;
-	}
-
-	.displayFlex {
-		display: flex;
-		margin-left: 0;
-		margin-top: 10px;
-		text-transform: uppercase;
-	}
-
-	.displayFlex li a {
-		line-height: 40px;
-		color: white
-	}
-
-	.displayFlex li:active {
-		background-color: #232323;
-	}
-
-	.width-img {
-		max-width: 100%;
-	} */
-
 
 	.advertisement {
-		margin: 75px auto 40px auto;
+		margin: 40px auto !important;
 	}
 
 	.advertisement:last-child {
-		margin: 40px auto 50px auto;
+		margin: 50px auto !important;
 	}
 
-	.form-introduce {
-		padding: 20px;
-		position: relative;
-		display: block;
-		margin: -80px auto 0 auto;
-		background-color: white;
-		bottom: 0;
-		left: 0;
-	}
-
-	.item-menu li:last-child {
-		margin: 0;
-	}
-
-	.form-introduce .tag,
-	.user span,
-	.time,
-	.tag {
-		font-size: 14px;
-	}
-
-	.infor-user {
-		margin-bottom: 0;
-	}
-
-	.list-post h4 {
-		font-size: 24px;
-		margin: 10px;
-		text-align: center;
+	.posts {
+		margin: 0 auto;
+		justify-content: center;
 	}
 
 	.post {
-		width: 100%;
+		padding: 0;
 	}
 
-	.post h4 {
-		text-align: start;
-		font-size: 18px;
+	article .user span {
+		font-size: 14px !important;
+		padding-left: 2px !important;
 	}
 
-	.post:first-child {
-		margin-top: 0;
+	article .infor-user .time {
+		font-size: 14px !important;
+		margin-left: 8px !important;
 	}
 
-	.post:nth-child(3n+1) {
-		margin-left: 10px;
+	article h4 {
+		margin: 10px 0 !important;
 	}
 
+	/*
 	footer {
 		margin-top: 50px;
 	}
@@ -667,6 +515,6 @@
 		justify-content: space-between;
 		width: 100%;
 		padding: 6px 0;
-	}
+	} */
 
 }
