--- a/asset/style/media-screen.css
+++ b/asset/style/media-screen.css
@@ -255,6 +255,10 @@
 		left: 12px !important;
 	}
 
+	.form-introduce {
+		padding: 10px !important;
+	}
+
 	.form-introduce h2 {
 		font-size: 18px !important;
 		line-height: 20px !important;
@@ -272,7 +276,19 @@
 
 	.user span {
 		font-size: 14px !important;
-		padding-left: 3px !important;
+		padding-left: 10px !important;
+	}
+
+	article .user span {
+		font-size: 14px !important;
+		padding-left: 50px !important;
+		display: block;
+		margin-top: -35px;
+	}
+
+	article .infor-user .time {
+		font-size: 14px !important;
+		margin-left: 50px !important;
 	}
 
 	.infor-user {
@@ -281,12 +297,7 @@
 
 	.infor-user .time {
 		font-size: 14px !important;
-		margin-left: 7px !important;
-	}
-
-	.user img {
-		width: 26px;
-		height: 26px;
+		margin-left: 45px !important;
 	}
 
 
@@ -440,12 +451,10 @@
 
 	article .user span {
 		font-size: 14px !important;
-		padding-left: 2px !important;
 	}
 
 	article .infor-user .time {
 		font-size: 14px !important;
-		margin-left: 8px !important;
 	}
 
 	article h4 {
